Meta tags updated

--- a/about.html
+++ b/about.html
@@ -6,11 +6,38 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="pingback" href="../xmlrpc.html">
-    <title>About &#8211; Nest</title>
-    <meta name='robots' content='max-image-preview:large' />
+      <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>GulfMart - Middle East Grocery Store Online | Fresh & Fast Delivery</title>
+
+<!-- SEO Meta Tags -->
+<meta name="description" content="Shop fresh groceries online at GulfMart - your trusted Middle East grocery store. Enjoy fast delivery, top deals, and premium quality products.">
+<meta name="keywords" content="Grocery store, online grocery, Gulf grocery, Middle East, fresh food, grocery delivery, vegetables, fruits, halal products, GulfMart">
+<meta name="author" content="Brandbik Creatives">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="GulfMart - Middle East Grocery Store Online">
+<meta property="og:description" content="Get fresh groceries delivered across the UAE and GCC. Discover our quality range of food products today!">
+<meta property="og:image" content="https://www.example.com/assets/og-image.jpg">
+<meta property="og:url" content="https://www.example.com/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="GulfMart - Middle East Grocery Store Online">
+<meta name="twitter:description" content="Shop online for premium groceries in the Gulf. Trusted by thousands.">
+ 
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://www.example.com/">
+
+<!-- Favicon -->
+<link rel="icon" href="/Assets/grocery-logo.png" type="image/x-icon">
+
+<!-- Pingback (optional for WordPress sites) -->
+<link rel="pingback" href="https://www.example.com/xmlrpc.php">
     <style>
         img:is([sizes="auto" i], [sizes^="auto," i]) {
             contain-intrinsic-size: 3000px 1500px
